fix: update pre-commit hooks configuration and fix code formatting, add jdk 21 support, update netty config